--- a/docs/website/root/compiled-binaries.mdx
+++ b/docs/website/root/compiled-binaries.mdx
@@ -4,21 +4,13 @@ hide_title: true
 hide_table_of_contents: true
 ---
 
+import CodeBlock from "@theme/CodeBlock";
+
 You can install a the **latest** released binary of the **{props.node}** by running this one line command (_replace **YOUR_PATH** with your installation path_):
 
-<pre>
-  curl --proto '=https' --tlsv1.2 -sSf
-  https://raw.githubusercontent.com/input-output-hk/mithril/refs/heads/main/mithril-install.sh
-  | sh -s -- -c {props.node} -d latest -p \*\*YOUR_PATH\*\*
-</pre>
-
-<!--
-MDX Variables are not interpolated correctly when in a markdown code block
-```bash
-curl --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/input-output-hk/mithril/refs/heads/main/mithril-install.sh \
-| sh -s -- -c ${props.node} -d latest -p **YOUR_PATH**
-```
--->
+<CodeBlock language="bash">
+  {`curl --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/input-output-hk/mithril/refs/heads/main/mithril-install.sh | sh -s -- -c {props.node} -d latest -p **YOUR_PATH**`}
+</CodeBlock>
 
 :::tip
 
