docs: create 'Beginner' sub section of 'About Mithril'

--- a/docs/website/root/mithril/advanced/mithril-protocol/README.mdx
+++ b/docs/website/root/mithril/advanced/mithril-protocol/README.mdx
@@ -3,3 +3,7 @@ title: Mithril protocol
 ---
 
 import DocCardList from "@theme/DocCardList";
+
+This section explains the Mithril protocol, which serves as the foundational cryptographic framework for the system. It outlines the processes for creating and verifying multi-signatures, enabling secure and efficient blockchain data validation. By leveraging a stake-based threshold signature scheme, the Mithril protocol ensures scalability, decentralization, and integrity within the network.
+
+<DocCardList />
