docs: fix typos in dev blog post distribution '2450'

--- a/docs/website/blog/2024-12-17-distribution-2450.md
+++ b/docs/website/blog/2024-12-17-distribution-2450.md
@@ -26,6 +26,9 @@ If you are running a **Mithril signer** on:
 - the **release-mainnet** network: you can upgrade the binary of your signer node to the version `0.2.221`, no configuration update is needed.
 
 You can **easily update your Mithril signer with this one line command** (it will be downloaded in the current directory, a custom folder can be specified with `-p` option):
-`curl --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/input-output-hk/mithril/refs/heads/main/mithril-install.sh | sh -s -- -c mithril-signer -d 2450.0 -p $(pwd)`
+
+```bash
+curl --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/input-output-hk/mithril/refs/heads/main/mithril-install.sh | sh -s -- -c mithril-signer -d 2450.0 -p $(pwd)
+```
 
 For any inquiries or assistance, feel free to contact the team on the [Discord channel](https://discord.gg/5kaErDKDRq).
