--- a/docs/website/blog/2024-12-17-distribution-2450.md
+++ b/docs/website/blog/2024-12-17-distribution-2450.md
@@ -1,5 +1,5 @@
 ---
-title: Distribution `v.2450` is now available
+title: Distribution `2450` is now available
 authors:
   - name: Mithril Team
 tags: [release, distribution, 2450, breaking-change]
@@ -10,19 +10,19 @@ tags: [release, distribution, 2450, breaking-change]
 We have released the [`2450.0`](https://github.com/input-output-hk/mithril/releases/tag/2450.0) distribution, which includes the following:
 
 - :fire: **Breaking changes** in the Mithril client library, CLI, and WASM:
-  - Removed the deprecated `network` field from the internal `CardanoDbBeacon`.
-  - Mithril certificates of type `CardanoImmutableFilesFull` cannot be verified with older clients.
-  - Clients from distribution `v.2445` and earlier **must** be updated.
-- Stable support for **Cardano node v.10.1.3** in the signer and aggregator.
-- Stable support for a one-line shell installation script for the Mithril node prebuilt binaries.
+  - Removed the deprecated `network` field from the internal `CardanoDbBeacon`
+  - Mithril certificates of type `CardanoImmutableFilesFull` cannot be verified with older clients
+  - Clients from distribution `2445` and earlier **must** be updated
+- Stable support for **Cardano node v.10.1.3** in the signer and aggregator
+- Stable support for a one-line shell installation script for the Mithril node prebuilt binaries
 - Various bug fixes and performance improvements.
 
 This new distribution has been deployed to the **Mithril aggregator** of the `release-mainnet` and `release-preprod` networks.
 
 If you are running a **Mithril signer**:
 
-- **Pre-release-preview** network: no action is required at this time.
-- **Release-preprod** network: upgrade your signer node binary to version `0.2.221`. No configuration updates are required.
+- **Pre-release-preview** network: no action is required at this time
+- **Release-preprod** network: upgrade your signer node binary to version `0.2.221`. No configuration updates are required
 - **Release-mainnet** network: upgrade your signer node binary to version `0.2.221`. No configuration updates are required.
 
 You can easily update your Mithril signer with this one-line command (it downloads to the current directory by default; you can specify a custom folder by using the `-p` option):
