--- a/docs/website/blog/2024-12-17-distribution-2450.md
+++ b/docs/website/blog/2024-12-17-distribution-2450.md
@@ -21,9 +21,9 @@ This new distribution has been deployed to the **Mithril aggregator** of the `re
 
 If you are running a **Mithril signer**:
 
-- **Pre-release-preview** network: no action is required at this time
-- **Release-preprod** network: upgrade your signer node binary to version `0.2.221`. No configuration updates are required
-- **Release-mainnet** network: upgrade your signer node binary to version `0.2.221`. No configuration updates are required.
+- **pre-release-preview** network: no action is required at this time
+- **release-preprod** network: upgrade your signer node binary to version `0.2.221`. No configuration updates are required
+- **release-mainnet** network: upgrade your signer node binary to version `0.2.221`. No configuration updates are required.
 
 You can easily update your Mithril signer with this one-line command (it downloads to the current directory by default; you can specify a custom folder by using the `-p` option):
 
