chore: add missing tag on distribution 2450 blog post

--- a/docs/website/blog/2024-12-17-distribution-2450.md
+++ b/docs/website/blog/2024-12-17-distribution-2450.md
@@ -2,7 +2,7 @@
 title: Distribution `2450` is now available
 authors:
   - name: Mithril Team
-tags: [release, distribution, 2450]
+tags: [release, distribution, 2450, breaking-change]
 ---
 
 ### Distribution `2450` is now available
