--- a/docs/website/blog/2024-12-17-distribution-2450.md
+++ b/docs/website/blog/2024-12-17-distribution-2450.md
@@ -9,7 +9,7 @@ tags: [release, distribution, 2450, breaking-change]
 
 We have released the [`2450.0`](https://github.com/input-output-hk/mithril/releases/tag/2450.0) distribution, which includes the following:
 
-- :fire: **Breaking changes** in the Mithril client library, CLI, and WASM:
+- :fire: **breaking changes** in the Mithril client library, CLI, and WASM:
   - Removed the deprecated `network` field from the internal `CardanoDbBeacon`
   - Mithril certificates of type `CardanoImmutableFilesFull` cannot be verified with older clients
   - Clients from distribution `2445` and earlier **must** be updated
@@ -22,8 +22,8 @@ This new distribution has been deployed to the **Mithril aggregator** of the `re
 If you are running a **Mithril signer**:
 
 - **pre-release-preview** network: no action is required at this time
-- **release-preprod** network: upgrade your signer node binary to version `0.2.221`. No configuration updates are required
-- **release-mainnet** network: upgrade your signer node binary to version `0.2.221`. No configuration updates are required.
+- **release-preprod** network: upgrade your signer node binary to version `0.2.221` - no configuration updates are required
+- **release-mainnet** network: upgrade your signer node binary to version `0.2.221` - no configuration updates are required.
 
 You can easily update your Mithril signer with this one-line command (it downloads to the current directory by default; you can specify a custom folder by using the `-p` option):
 
