--- a/docs/website/blog/2024-12-17-distribution-2450.md
+++ b/docs/website/blog/2024-12-17-distribution-2450.md
@@ -9,7 +9,7 @@ tags: [release, distribution, 2450, breaking-change]
 
 We have released the [`2450.0`](https://github.com/input-output-hk/mithril/releases/tag/2450.0) distribution, which includes the following:
 
-- :fire: **breaking changes** in the Mithril client library, CLI, and WASM:
+- :fire: **Breaking changes** in the Mithril client library, CLI, and WASM:
   - Removed the deprecated `network` field from the internal `CardanoDbBeacon`
   - Mithril certificates of type `CardanoImmutableFilesFull` cannot be verified with older clients
   - Clients from distribution `2445` and earlier **must** be updated
