--- a/docs/website/versioned_docs/version-maintained/compiled-binaries.mdx
+++ b/docs/website/versioned_docs/version-maintained/compiled-binaries.mdx
@@ -29,3 +29,12 @@ The Linux binaries target `glibc`, and have a minimum requirement of `glibc 2.31
 or `Debian Bullseye`).
 
 :::
+
+:::warning
+
+After the release of distribution `2506` mid-February, the minimum required `glibc` version for Linux binaries
+will be raised to `2.35` (compatible with `Ubuntu 22.04` or `Debian 12 - Bookworm`).
+
+If you using a system with an older version of `glibc`, you will need to compile the binaries from source.
+
+:::
