--- a/docs/website/root/compiled-binaries.mdx
+++ b/docs/website/root/compiled-binaries.mdx
@@ -32,9 +32,9 @@ or `Debian Bullseye`).
 
 :::warning
 
-After the release of distribution `2506` mid-February, the minimum required `glibc` version for Linux binaries
-will be raised to `2.35` (compatible with `Ubuntu 22.04` or `Debian 12 - Bookworm`).
+From March 2025 onwards, released Linux binaries will have their minimum required `glibc` version raised to `2.35`
+(compatible with `Ubuntu 22.04` or `Debian 12 - Bookworm`).
 
-If you using a system with an older version of `glibc`, you will need to compile the binaries from source.
+If you are using a system with an older version of `glibc`, you will need to compile the binaries from source.
 
 :::
